Finally figured out the JSON markers HALLELUJAH! got firestore working for wallet + started the foundations of currency exchange with a cheeky lil popup windae Someone pls tell me how to get them currency rates???

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,83 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="396dp"
+            android:layout_height="59dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="404dp"
+            android:layout_marginEnd="8dp"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
+            android:theme="?attr/actionBarTheme"
+            mapbox:layout_constraintBottom_toBottomOf="parent"
+            mapbox:layout_constraintEnd_toEndOf="parent"
+            mapbox:layout_constraintHorizontal_bias="0.285"
+            mapbox:layout_constraintStart_toStartOf="parent"
+            mapbox:layout_constraintTop_toTopOf="@+id/mapView"
+            mapbox:layout_constraintVertical_bias="1.0" />
 
         <com.mapbox.mapboxsdk.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
-            mapbox:mapbox_cameraZoom="11" >
+            mapbox:layout_constraintBottom_toBottomOf="parent"
+            mapbox:layout_constraintEnd_toEndOf="parent"
+            mapbox:layout_constraintStart_toStartOf="parent"
+            mapbox:layout_constraintTop_toTopOf="parent"
+            mapbox:mapbox_cameraZoom="11"
+            mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10">
 
         </com.mapbox.mapboxsdk.maps.MapView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/Bank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            mapbox:backgroundTint="@color/colorPrimaryDark"
+            mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
+            mapbox:layout_constraintEnd_toEndOf="parent"
+            mapbox:layout_constraintHorizontal_bias="0.52"
+            mapbox:layout_constraintStart_toEndOf="@+id/Trophies"
+            mapbox:layout_constraintTop_toTopOf="@+id/toolbar"
+            mapbox:srcCompat="@android:drawable/ic_menu_myplaces" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/Trophies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            mapbox:backgroundTint="@color/colorPrimaryDark"
+            mapbox:layout_constraintBottom_toBottomOf="parent"
+            mapbox:layout_constraintEnd_toEndOf="parent"
+            mapbox:layout_constraintStart_toStartOf="@+id/toolbar"
+            mapbox:layout_constraintTop_toTopOf="@+id/toolbar"
+            mapbox:srcCompat="@android:drawable/btn_star_big_off" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/Wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            mapbox:backgroundTint="@color/colorPrimaryDark"
+            mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
+            mapbox:layout_constraintEnd_toStartOf="@+id/Trophies"
+            mapbox:layout_constraintHorizontal_bias="0.45"
+            mapbox:layout_constraintStart_toStartOf="@+id/toolbar"
+            mapbox:layout_constraintTop_toTopOf="@+id/toolbar"
+            mapbox:srcCompat="@android:drawable/sym_action_email" />
 
 
 </android.support.constraint.ConstraintLayout>
