--- a/app/src/main/res/layout/activity_bank_pop_up.xml
+++ b/app/src/main/res/layout/activity_bank_pop_up.xml
@@ -20,6 +20,7 @@
 
     <Button
         android:id="@+id/backk"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -43,6 +44,7 @@
         android:layout_marginBottom="8dp"
         android:text="You are about to deposit:"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/backk"
@@ -60,6 +62,7 @@
         android:layout_marginBottom="8dp"
         android:text="0 GOLD"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/backk"
@@ -70,6 +73,7 @@
 
     <Button
         android:id="@+id/depositt"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
