--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -10,6 +10,7 @@
     android:background="@android:color/transparent"
     android:text="Example"
     android:textAlignment="center"
+    android:textColor="@color/colorPrimaryDark"
     android:textSize="24sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
