--- a/app/src/main/res/layout/activity_monies_pop_up.xml
+++ b/app/src/main/res/layout/activity_monies_pop_up.xml
@@ -23,12 +23,14 @@
 
     <ListView
         android:id="@+id/listy"
+        style="@style/Widget.AppCompat.ListView"
         android:layout_width="368dp"
         android:layout_height="261dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
